# EyeAgent-mcp

./: .gitignore  404.html  eyeagent.code-workspace  index.html  mkdocs.eyeagent.yml  mkdocs.eyetools.yml  mkdocs.yml
docs/: index.md
eyeagent/: .env.example  .gitignore  README.md  demo.py  diagnostic_workflow.py  index.html  main_client.py  multiagent_framework.py  pyproject.toml  run_multiagent.py
eyeagent/architecture/: index.html
eyeagent/architecture_diagnosis/: index.html
eyeagent/benchmark/: README.md  USAGE_GUIDE.md  __init__.py  cli.py  config.py  dataset_loader.py  format_agent.py  metrics.py  rerun_failed_cases.py  runner.py
eyeagent/benchmark/examples/: README.md  run_example.py  vqa_cfp_real.yaml  vqa_cfp_single_agent.yaml  vqa_oct_benchmark.yaml  vqa_oct_real.yaml  vqa_slo_real.yaml
eyeagent/config/: eyeagent.yml  interaction.yml  pipelines.yml  prompts.yml  tools.yml
eyeagent/docs/: architecture.md  architecture_diagnosis.md  index.md  quickstart.md
eyeagent/eyeagent/: __init__.py  diagnostic_workflow.py  main_client.py  multiagent_framework.py  run_diagnosis.py  run_multiagent.py  run_ophthalmology_demo.py  run_topology_demo.py  single_agent_test.py
eyeagent/eyeagent/agents/: __init__.py  base_agent.py  capabilities.py  conversation_manager.py  decision_agent.py  diagnostic_base_agent.py  followup_agent.py  image_analysis_agent.py  knowledge_agent.py  multimodal_agent.py  orchestrator_agent.py  preliminary_agent.py  registry.py  report_agent.py  specialist_agent.py  unified_agent.py
eyeagent/eyeagent/config/: pipelines.py  pipelines.yml  prompts.py  settings.py  tools_description.py  tools_filter.py
eyeagent/eyeagent/core/: adapters.py  diagnosis_utils.py  interaction_engine.py  logging.py  topologies.py
eyeagent/eyeagent/dataset/: __init__.py  base_dataset.py  vqa_dataset.py
eyeagent/eyeagent/examples/: __init__.py  adapters.py
eyeagent/eyeagent/llm/: json_client.py  models.py
eyeagent/eyeagent/metrics/: metrics.py
eyeagent/eyeagent/schemas/: diagnosis_report_schema.json
eyeagent/eyeagent/tools/: langchain_mcp_tools.py  tool_registry.py
eyeagent/eyeagent/tracing/: trace_logger.py
eyeagent/eyeagent/ui/: __init__.py  app.py
eyeagent/eyeagent/workflows/: __init__.py  interaction.py  langgraph.py  profile.py  single.py
eyeagent/quickstart/: index.html
eyeagent/scripts/: prepare_vqa_datasets.py  run_benchmark.sh
eyeagent/tests/: test_integration_mcp_real.py  test_knowledge_smoke.py  test_smoke_dry_run.py
eyetool/: README.md  main_client.py  main_server.py  pyproject.toml
eyetool/config/: tools.yaml
eyetool/tools/: image_utils.py  math_utils.py
eyetool/tools/classification/: __init__.py
eyetool/tools/detection/: __init__.py
eyetool/tools/generation/: __init__.py
eyetool/tools/multimodal/: __init__.py
eyetool/tools/segmentation/: __init__.py
eyetools/: MANIFEST.in  README.md  TOOL_STANDARDIZATION_README.md  index.html  pyproject.toml
eyetools/architecture/: index.html
eyetools/contributing/: index.html
eyetools/docs/: architecture.md  contributing.md  index.md  quickstart.md  testing.md
eyetools/docs/modules/: config.md  env_process.md  mcp.md  mcp_cli_logging.md  registry.md  role_router.md  segmentation.md  tool_loading.md  tool_manager.md
eyetools/envs/py311-retfound/: pyproject.toml
eyetools/envs/py312/: pyproject.toml
eyetools/envs/py312-multimodal/: pyproject.toml
eyetools/envs/py312-rag/: pyproject.toml
eyetools/envs/py312-retfound/: pyproject.toml
eyetools/envs/py312-seg/: pyproject.toml
eyetools/examples/tool_package_template/: README.md  __init__.py  config.py  config.yaml  main.py  requirements.txt  tool_impl.py
eyetools/eyetools/: __init__.py  base.py  cli.py  mcp_server.py  registry.py  tool_manager.py  utils.py
eyetools/eyetools/core/: __init__.py  config_loader.py  env_manager.py  errors.py  loader.py  logging.py  process_manager.py  registry.py  role_router.py  tool_base.py  tool_manager.py  utils.py  worker_entry.py  worker_protocol.py
eyetools/eyetools/tools/: __init__.py
eyetools/eyetools/tools/classification/: __init__.py  classification.py
eyetools/eyetools/tools/disease_specific_cls/: __init__.py  tool_impl.py
eyetools/eyetools/tools/segmentation/: __init__.py  tool_impl.py
eyetools/modules/config/: index.html
eyetools/modules/env_process/: index.html
eyetools/modules/mcp/: index.html
eyetools/modules/mcp_cli_logging/: index.html
eyetools/modules/registry/: index.html
eyetools/modules/role_router/: index.html
eyetools/modules/segmentation/: index.html
eyetools/modules/tool_loading/: index.html
eyetools/modules/tool_manager/: index.html
eyetools/quickstart/: index.html
eyetools/scripts/: demo_segmentation.py  mcp_client_demo.py  run_multimodal_demo.py  test_mcp_rag.py  test_rag_standalone.py
eyetools/testing/: index.html
eyetools/tests/: __init__.py  conftest.py  test_admin_endpoints.py  test_classification.py  test_classification_import.py  test_classification_tool.py  test_cli.py  test_cli_preload.py  test_config_loader.py  test_discovery.py  test_discovery_classification_pkg.py  test_disease_specific_tool.py  test_env_manager.py  test_logging_file.py  test_mcp_server.py  test_metrics_and_errors.py  test_multimodal_tool.py  test_process_manager.py  test_rag_tool.py  test_role_router.py  test_segmentation_tool.py  test_tool_manager_inproc.py  test_tool_manager_subprocess.py  test_warmup_endpoints.py
eyetools/tools/: __init__.py
eyetools/tools/classification/: README.md  __init__.py  class_lists.py  config.yaml  model_factory.py  tool_impl.py
eyetools/tools/classification/models/: cfp_age_model.py  csra.py  resnet_csra.py
eyetools/tools/disease_specific_cls/: README.md  __init__.py  config.yaml  tool_impl.py
eyetools/tools/multimodal/: README.md  __init__.py  config.yaml  tool_impl.py
eyetools/tools/rag/: README.md  config.yaml  tool_impl.py  vectorstore_qdrant.py
eyetools/tools/segmentation/: README.md  __init__.py  config.yaml  tool_impl.py
eyetools/tools/web_search/: README.md  config.yaml  tool_impl.py
(+38 files in other folders)
